Local Changes. DockumentationBuilder is done. New Files to track progress and other changes